# Executable-Future-Verification

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: benchmark_expansion_roadmap.md  benchmark_portfolio_2026.md  code_survey.md  dev2_disk_blocker_20260614.md  dev2_recovery_status_20260614.md  experiment_plan.md  external_benchmark_adapter_spec.md  first_layer_pusht100_code_driven_audit.md  first_layer_pusht100_dinov2_patch_similarity.md  first_layer_pusht100_lance_raw_action_sequence_world_expert_gpu_e200.md  first_layer_pusht100_lance_raw_action_sequence_world_expert_gpu_e50.md  first_layer_pusht100_real_ac_umm_ldm_32x1_gpu_e200_h128.md  first_layer_pusht100_real_ac_umm_ldm_32x1_gpu_e50_h64.md  first_layer_pusht100_real_ac_umm_ldm_32x1_gpu_e600_h128.md  first_layer_pusht100_static_dino_action_world_failure_gate_lower_dist_gpu_e200.md  first_layer_pusht100_static_dino_action_world_failure_gate_lower_dist_gpu_e50.md  first_layer_pusht100_static_dino_progress_action_world_failure_gate_lower_dist_gpu_e200.md  first_layer_pusht100_static_dino_progress_action_world_failure_gate_lower_dist_gpu_e50.md  first_layer_pusht100_static_dino_progress_action_world_failure_gate_oracle_rescue_gpu_e200.md  future_verification_manifest_protocol.md  iclr_boss_brief_zh_20260613.md  iclr_boss_dashboard_current.json  iclr_boss_dashboard_current.md  iclr_claim_report_result.json  iclr_claim_report_result.md  iclr_evidence_stack_gate.md  iclr_evidence_stack_gate_result.json  iclr_evidence_stack_gate_result.md  iclr_evidence_stack_registry.json  iclr_gap_report_current.json  (+58 more)
(+106 files in other folders)
