[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "umm-reward-evaluator"
version = "0.1.0"
description = "UMM reward evaluator utilities for action-conditioned world-model rollouts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
