[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "umm-reward-evaluator"
version = "0.1.0"
description = "Executable-future verification utilities for robot world-action candidate selection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "imageio[ffmpeg]>=2.34",
  "numpy>=1.24",
  "pillow>=10.0",
  "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
